adapt to new API version

--- a/onYOURway.Client.WebApp/App/views/_map.html
+++ b/onYOURway.Client.WebApp/App/views/_map.html
@@ -25,7 +25,7 @@
                                                , click: $root.locate.itemClick, attr: { id: Id }
                                           ">
                 <div class="locationInfo-imageArea">
-                    <i class=" fa fa-2x" data-bind="css: $data.Icon"></i>
+                    <i class=" fa fa-2x" data-bind="css: $data.IconCssClass"></i>
                     <!--<div class="locationInfo-image" data-bind="style: { 'background-image': 'url(../../Content/images/ventures/v-' + Id() + '-80.jpg)' }" />-->
                 </div>
                 <i class="fa fa-chevron-right detailsIndicator"></i>
