--- a/onYOURway.Client.WebApp/App/views/vonMorgen/_map.html
+++ b/onYOURway.Client.WebApp/App/views/vonMorgen/_map.html
@@ -187,7 +187,7 @@
                                                  , click: $root.location.itemClick, attr: { id: Id }
                                             ">
           <div class="locationInfo-imageArea">
-            <i class=" fa fa-2x" data-bind="css: $data.Icon"></i>
+            <i class=" fa fa-2x" data-bind="css: $data.IconCssClass"></i>
           </div>
           <i class="fa fa-chevron-right detailsIndicator"></i>
           <h5 class="locationInfo-title" data-bind="text: Name" style="max-height: 30px; overflow: hidden; overflow-wrap: break-word; -ms-word-wrap: hyphenate; word-wrap:hyphenate;"></h5>
