--- a/onYOURway.Client.WebApp/App/views/vonMorgenMin/searchResults.html
+++ b/onYOURway.Client.WebApp/App/views/vonMorgenMin/searchResults.html
@@ -7,7 +7,7 @@
                                  , click: $root.placeClick
                                  , attr: { id: Id }
             ">
-                <i class=" fa" data-bind="css: $data.Icon"></i>
+                <i class=" fa" data-bind="css: $data.IconCssClass"></i>
                 <h5 data-bind="text: Name"></h5>
                 <p data-bind="text: $data.address"></p>
             </li>
