--- a/onYOURway.Client.WebApp/App/components/searchBox-component.html
+++ b/onYOURway.Client.WebApp/App/components/searchBox-component.html
@@ -8,7 +8,7 @@
        autofocus="autofocus"
        data-bind="
             value: searchTerm,
-            select2: {
+            select2vM: {
                 multiple: true,
                 minimumInputLength: 1,
                 data: {results: searchSuggestionObjects(), text: 'Name'},
